<resources>
    <string name="unknown_string"> Unknown </string>
    <string name="close_string"> Close </string>
    <string name="scanning_image_string">Scanning image… </string>
    <string name="upload_route">Uploading Route to server… </string>
    <string name="upload_general">Uploading, please wait</string>
    <string name="app_name">meetAveiro</string>
    <string name="title_activity_photo_log_map">Photo Log</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in meetAveiro now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Enter Password</string>
    <string name="go_back">Go Back</string>
    <string name="title_activity_navigation_drawer">meetAveiro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="option_photo_log">Photo Log</string>
    <string name="option_attractions">Attractions</string>
    <string name="option_routes">Routes</string>
    <string name="option_events">Events</string>
    <string name="option_history">My History</string>
    <string name="option_account_settings">Account Settings</string>
    <string name="option_logout">Logout</string>
    <string name="nav_home">Home</string>
    <string name="nav_account_settings">Account Settings</string>
    <string name="nav_about_us">About Us</string>
    <string-array name="nav_item_activity_titles">
        <item>Photo Logging</item>
        <item>Aveiro Attractions</item>
        <item>Routes</item>
        <item>Events</item>
        <item>History</item>
        <item>Account Settings</item>
    </string-array>
    <string name="activity_title_about_us">About Us</string>
    <string name="route">Route</string>
    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="stop_route">Stop Route</string>
    <string name="take_picture">Take Picture</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="add_geofences">Add geofences</string>
    <string name="remove_geofences">Remove geofences</string>
    <string name="geofences_added">Geofences added</string>
    <string name="geofences_removed">Geofences removed</string>
    <string name="geofence_not_available">Geofence service is not available now</string>
    <string name="geofence_too_many_geofences">Your app has registered too many geofences</string>
    <string name="geofence_too_many_pending_intents">
        You have provided too many PendingIntents to the addGeofences() call
    </string>
    <string name="unknown_geofence_error">
        Unknown error: the Geofence service is not available now
    </string>
    <string name="geofence_transition_invalid_type">
        Geofence transition error: invalid transition type %1$d
    </string>
    <string name="geofence_transition_entered">Entered</string>
    <string name="geofence_transition_exited">Exited</string>
    <string name="unknown_geofence_transition">Unknown Transition</string>
    <string name="geofence_transition_notification_text">
        Click notification to know more about this attraction
    </string>
    <string name="insufficient_permissions">Insufficient permissions.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="pause_route">Pause Route</string>
    <string name="tour_save">Would you like to save and/or share this Tour?</string>
    <string name="fill_out">Please fill this out!</string>
    <string name="see_more_info">See more info</string>
    <string name="feedback">Do you think our app was able to identify succesfully your image?</string>
    <string name="feedback_success">Your response was registered. Thank you!</string>
    <string name="feedback_fail">There was a problem and we were unable to send your response</string>
    <string name="image_rec_fail">Unfortunately, we were unable to identify the content of this image.  Try taking another picture from a different angle, and make sure theres enough light in the picture.</string>
    <string name="dont_answer">Don\'t answer</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="procede">continue</string>
    <string name="remove_tour_from_map_btn">Remove Tour From Map</string>
    <string name="edit_tour_name">Edit Tour\'s tittle/description</string>
    <string name="pause_tour_btn">Pause Tour</string>
    <string name="stop_tour_btn">Stop Tour</string>
    <string name="start_tour_btn">Start Tour</string>
    <string name="picture_btn">Take picture</string>
    <string name="unknown_photo_dialog_description">"Photo taken on: "</string>
    <string name="server_connect_error">Could not connect to server, please try again later</string>
    <string name="problem_marker_load_from_storage">There was a problem loading from storage</string>
    <string name="save_tour_dialog_title">You can now save this tour, but first, please give it a
    name and a description</string>
    <string name="routes_in_attr">Routes that pass in this attraction</string>
    <string name="edit_tour_dialog_title">Change this tour\'s description and/or title</string>
    <string name="save_tour_title">Name this tour</string>
    <string name="save_tour_description">Describe this tour</string>
    <string name="save_tour_discard">Don\'t save this tour</string>
    <string name="save_tour">Save</string>
    <string name="exit_tour_confirmation">You are currently in route mode. If you exit now, this route will
    be lost forever. To avoid this, go back and end your tour.\n Are you sure you want to leave?</string>
    <string name="start_tour_confirmation">If you start a new tour, the previous tour will be removed from the map but if you saved it, you can access it later on the \"My history\" menu</string>
    <string name="tour_sent_server_confirmation">Your Tour was saved!</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="option_get_place">Points of Interest</string>
    <string name="pick_place">Choose a place</string>
    <string name="route_empty">This route is too small or empty. It will not be saved</string>
    <string name="foto_intent_fail">A problem ocurred with this photo. Try taking another one!</string>
    <string name="title_popular_routes">Popular Routes</string>
    <string name="title_top_rated_routes">Top Rated Routes</string>
    <string name="title_new_routes">New Routes</string>
    <string name="title_my_routes">My Routes</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title">Contacts</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="title_history">History</string>
    <string name="title_most_recent">Most Recent</string>
    <string name="title_top_rated">Top Rated</string>
    <string name="title_most_traveled">Most Traveled</string>
    <string name="route_privacy">Would you like to make this route public or private?</string>
    <string name="route_privacy_details">If you choose to make this route public, other users can see your route and follow it.</string>
    <string name="make_public">Make it public</string>
    <string name="make_private">Make it private</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet,
        consectetur adipiscing elit. Nulla eu sagittis mi, id tristique mi.
        Praesent quis leo vitae enim maximus sodales vitae non sem.
        Vestibulum cursus metus in urna elementum, vitae ullamcorper arcu porttitor.
        Vestibulum sit amet massa commodo, feugiat mi non, porta risus. Nulla porttitor,
        dolor ac placerat malesuada, dolor lectus aliquam nisl, a eleifend libero turpis in ligula.
        Suspendisse ac vulputate urna. Suspendisse condimentum arcu tortor. Quisque finibus,
        justo id rhoncus ullamcorper, lorem turpis pretium purus,
        vitae euismod lectus neque ut odio. Vivamus dignissim bibendum faucibus.
        Duis at egestas sapien. Curabitur pretium magna tellus, eget rutrum nunc consectetur eget.
        In volutpat metus eu gravida ornare. Duis non blandit augue. Nam ut lacus et dui congue blandit eget et nunc.

</string>
    <string name="title_activity_attraction_map">Map</string>
    <string name="title_activity_route_details">RouteDetailsActivity</string>
    <string name="event_detail_price">Price</string>
    <string name="event_detail_location">Location</string>
    <string name="event_detail_title">Title</string>
    <string name="path">Path</string>
    <string name="route_date">Route Date</string>
    <string name="photos">Photos</string>
    <string name="route_description">Route Description</string>
</resources>