<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pi.ua.meetaveiro.activities.RouteActivity">

    <fragment xmlns:map="http://schemas.android.com/apk/res-auto"
        android:id="@+id/route_map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        map:mapType="satellite" />

    <ImageButton
        android:id="@+id/back_image_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|left"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/white_opac"
        android:src="@drawable/ic_chevron_left_black_24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="vertical">

        <!--<android.support.design.widget.FloatingActionButton
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="0dp"
            android:src="@drawable/ic_stop"
            android:visibility="gone"
            app:backgroundTint="@color/danger" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="0dp"
            android:src="@drawable/ic_pause"
            android:visibility="gone"
            app:backgroundTint="@color/warning" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:padding="0dp"
            android:src="@android:drawable/ic_media_play"
            android:visibility="visible"
            app:backgroundTint="@color/success" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_add_photo"
            app:backgroundTint="@color/colorPrimary" />
        -->
        <Button
            android:id="@+id/stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_tour_btn"
            android:drawableLeft="@drawable/ic_stop"
            android:visibility="gone"
            android:backgroundTint="@color/danger"/>

        <Button
            android:id="@+id/pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pause_tour_btn"
            android:drawableLeft="@drawable/ic_pause"
            android:visibility="gone"
            android:backgroundTint="@color/warning" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_tour_btn"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:visibility="visible"
            android:backgroundTint="@color/success" />

        <Button
            android:id="@+id/take_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_add_photo"
            android:text="@string/picture_btn"
            android:backgroundTint="@color/colorPrimary" />
    </LinearLayout>
</FrameLayout>